--- a/latex/main.tex
+++ b/latex/main.tex
@@ -52,7 +52,7 @@
 
 \input{math_commands.tex}
 
-\title{A Tutorial on Weighted Automata \\ in Machine Learning}
+\title{An Introduction to Weighted Automata \\ in Machine Learning}
 \author{Awni Hannun\footnote{
   Send correspondence to
   \href{mailto:awni.hannun@gmail.com}{awni.hannun@gmail.com}}}
