--- a/latex/math_commands.tex
+++ b/latex/math_commands.tex
@@ -19,8 +19,12 @@
 \newcommand{\gC}{\mathcal{C}}
 \newcommand{\gE}{\mathcal{E}}
 \newcommand{\gT}{\mathcal{T}}
+\newcommand{\gU}{\mathcal{U}}
 \newcommand{\gY}{\mathcal{Y}}
 \newcommand{\gZ}{\mathcal{Z}}
+
+%% Language
+\renewcommand\L{\mathcal{L}}
 
 %% <s> and </s> tokens
 \newcommand{\sos}{\textrm{<s>}}
